feat: add new military tech era
# Motivation

Similar to commit
e564dfacbad087bb2f09504e665d3edf6a9602fc, the idea
is to expand the tech tree to include more
technologies to research.

# Changes

- Added 13 new military techs
- Moved some of the buildings/military units to
  said new techs

# Future work

- Add additional military units
- Add unique icons to each of the new techs

--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -62,3 +62,31 @@
  early_modern_universities_desc: "Institutions of higher learning that emerged in Europe during the late Middle Ages and early modern period. They were centers of scholarship and research."
  natural_history: "Natural History"
  natural_history_desc: "The study of plants, animals, and minerals, with a focus on classification, description, and observation."
+
+ # Military
+ supply_train: "Supply Train"
+ supply_train_desc: "A convoy of wagons and pack animals that carries supplies, such as food, ammunition, and equipment, to an army in the field."
+ lines_of_communication: "Lines of Communication"
+ lines_of_communication_desc: "Routes and systems that are used to transport troops, supplies, and information between military units."
+ military_levy: "Military Levy"
+ military_levy_desc: "A system of conscription that requires able-bodied citizens to serve in the military during times of war."
+ tech_hussar: "Hussar"
+ tech_hussar_desc: "A type of light cavalry that was used by European armies in the 16th and 17th centuries. Hussars were known for their speed and mobility."
+ flintlock_musket: "Flintlock Musket"
+ flintlock_musket_desc: "A type of musket that was widely used by European armies in the 17th and 18th centuries. It was more reliable and faster to reload than earlier muskets."
+ field_guns: "Field Guns"
+ field_guns_desc: "Cannons and artillery pieces that are designed to be moved and used on the battlefield. They are used to support infantry and cavalry units."
+ threadwheel_crane: "Threadwheel Crane"
+ threadwheel_crane_desc: "A type of crane that was used in the construction of fortifications and other large structures. It was powered by human or animal labor."
+ sextant: "Sextant"
+ sextant_desc: "A navigational instrument that is used to measure the angle between a celestial object and the horizon. It is used to determine a ship's latitude and longitude."
+ standardized_shipbuilding: "Standardized Shipbuilding"
+ standardized_shipbuilding_desc: "The use of standardized designs and construction techniques to build ships more efficiently and quickly."
+ naval_professionalization: "Naval Professionalization"
+ naval_professionalization_desc: "The process of training and organizing a professional navy, with specialized officers, crews, and ships."
+ tech_frigate: "Frigate"
+ tech_frigate_desc: "A type of warship that was used by European navies in the 17th and 18th centuries. Frigates were fast and maneuverable, and they were used for a variety of missions."
+ careening: "Careening"
+ careening_desc: "A process in which a ship is heeled over on its side to clean and repair its hull. It was commonly used by European navies in the 17th and 18th centuries."
+ three_deckers: "Three-Deckers"
+ three_deckers_desc: "A type of warship that had three gun decks and was used by European navies in the 17th and 18th centuries. Three-deckers were powerful but slow and difficult to maneuver."
