--- a/localization/english/br_religion_l_english.yml
+++ b/localization/english/br_religion_l_english.yml
@@ -45,9 +45,9 @@
  #Religious decisions
 
  hellenic_decision: "Hellenic Revival"
- hellenic_decision_desc: "WARNING! READ CAREFULLY! This decision changes your state religion and greatly angers the majority of your population. (Will write fun RP Story here later)"
+ hellenic_decision_desc: "@warning! This decision changes your state religion and greatly angers the majority of your population. (Will write fun RP Story here later)"
  orthodox_decision: "Reestablish State Orthodoxy"
- orthodox_decision_desc: "WARNING! READ CAREFULLY! This decision changes your state religion and greatly angers the majority of your population. (Will write fun RP Story here later)"
+ orthodox_decision_desc: "@warning! This decision changes your state religion and greatly angers the majority of your population. (Will write fun RP Story here later)"
 
  revive_khazer_khanate_decision: "Revive the Khazar Khaganate"
  revive_khazer_khanate_decision_desc: "Jews from both the Islamic world and Basileía Romaíon are known to have migrated to Tartaria during periods of persecution under Heraclius, Justinian II, Leo III, and Romanus Lakapēnos. For Simon Schama, Jewish communities from the Balkans and the Bosphoran Crimea, especially from Panticapaeum, began migrating to the more hospitable climate of pagan Tartaria in the wake of these persecutions, and were joined there by Jews from Armenia. The Geniza fragments, he argues, make it clear the Judaising reforms sent roots down into the whole of the population. The pattern is one of an elite conversion preceding large-scale adoption of the new religion by the general population, which often resisted the imposition. One important condition for mass conversion was a settled urban state, where churches, synagogues or mosques provided a focus for religion, as opposed to the free nomadic lifestyle of life on the open steppes."
