fix: add missing localization key

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -103,6 +103,7 @@
  br_modifier_italy_accessible_stock_exchanges: "Accessible Stock Exchanges"
  br_modifier_italy_colonial_dividends: "Colonial Dividends"
  br_modifier_italy_gunboat_trade_diplomacy: "Gunboat Diplomacy"
+ br_modifier_italy_venetian_arsenal: "Venetian Arsenal"
 
  liberum_veto: "Liberum Veto"
  piotrkow_statutes: "Piotrkow Statutes"
