feat: give unique tech for frontier colonization
# Motivation

All of the colonization techs should not be
available all at once. This way a players must be
more strategic in how they want to approach
colonization.

# Changes

- Added a new tech called `Frontier Expansion`
- `frontier_colonization` tech now requires
  "Frontier Expansion" tech

--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -36,6 +36,8 @@
  tech_mercantilism_desc: "An economic theory that emphasizes the importance of accumulating wealth through trade and the establishment of colonies."
  tech_agrarianism: "Agrarianism"
  tech_agrarianism_desc: "A political and social philosophy that emphasizes the importance of agriculture and rural life."
+ frontier_expansion: "Frontier Expansion"
+ frontier_expansion_desc: "The process of moving the boundaries of a country or territory into new, unclaimed land. It was a common feature of European colonization in the Americas."
  smithian_economics: "Smithian Economics"
  smithian_economics_desc: "An economic theory that was developed by Adam Smith and emphasizes the importance of free markets, competition, and self-interest."
  fiat_currency: "Fiat Currency"
