adjustments: tech, hub names. starting balance
- Further work on tech tree and balancing starting inventions.
- Jozue's work on hub_names
- Some balance work on the history files

--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -682,9 +682,9 @@
  HUB_NAME_STATE_MOLDAVIA_farm: "Focşani"
  HUB_NAME_STATE_MOLDAVIA_wood: "Bacău"
  HUB_NAME_STATE_EAST_GALICIA_city: "Lwów"
- HUB_NAME_STATE_EAST_GALICIA_mine: "Chernivtsi"
- HUB_NAME_STATE_EAST_GALICIA_farm: "Stanyslaviv"
- HUB_NAME_STATE_EAST_GALICIA_wood: "Stryi"
+ HUB_NAME_STATE_EAST_GALICIA_mine: "Czerniowce"
+ HUB_NAME_STATE_EAST_GALICIA_farm: "Stanisławów"
+ HUB_NAME_STATE_EAST_GALICIA_wood: "Stryj"
  HUB_NAME_STATE_WEST_GALICIA_city: "Kraków"
  HUB_NAME_STATE_WEST_GALICIA_mine: "Jaroslaw"
  HUB_NAME_STATE_WEST_GALICIA_farm: "Rzeszow"
@@ -693,17 +693,17 @@
  HUB_NAME_STATE_SILESIA_mine: "Görbitz"
  HUB_NAME_STATE_SILESIA_farm: "Königshütte"
  HUB_NAME_STATE_SILESIA_wood: "Kreuzburg"
- HUB_NAME_STATE_POSEN_city: "Posen"
- HUB_NAME_STATE_POSEN_mine: "Lissa"
- HUB_NAME_STATE_POSEN_farm: "Bronberg"
- HUB_NAME_STATE_POSEN_wood: "Neutornischel"
- HUB_NAME_STATE_WEST_PRUSSIA_city: "Danzig"
- HUB_NAME_STATE_WEST_PRUSSIA_port: "Putzig"
- HUB_NAME_STATE_WEST_PRUSSIA_mine: "Konitz"
- HUB_NAME_STATE_WEST_PRUSSIA_farm: "Thorn"
+ HUB_NAME_STATE_POSEN_city: "Poznan"
+ HUB_NAME_STATE_POSEN_mine: "Leszno"
+ HUB_NAME_STATE_POSEN_farm: "Bydgoszcz"
+ HUB_NAME_STATE_POSEN_wood: "Nowy Tomysl"
+ HUB_NAME_STATE_WEST_PRUSSIA_city: "Gdansk"
+ HUB_NAME_STATE_WEST_PRUSSIA_port: "Puck"
+ HUB_NAME_STATE_WEST_PRUSSIA_mine: "Chojnice"
+ HUB_NAME_STATE_WEST_PRUSSIA_farm: "Torun"
  HUB_NAME_STATE_WEST_PRUSSIA_wood: "Strasburg"
  HUB_NAME_STATE_EAST_PRUSSIA_city: "Königsberg"
- HUB_NAME_STATE_EAST_PRUSSIA_port: "Memel"
+ HUB_NAME_STATE_EAST_PRUSSIA_port: "Klaipeda"
  HUB_NAME_STATE_EAST_PRUSSIA_mine: "Gumbinnen"
  HUB_NAME_STATE_EAST_PRUSSIA_farm: "Insterburg"
  HUB_NAME_STATE_EAST_PRUSSIA_wood: "Allenstein"
@@ -715,11 +715,11 @@
  HUB_NAME_STATE_LESSER_POLAND_mine: "Radom"
  HUB_NAME_STATE_LESSER_POLAND_farm: "Kielce"
  HUB_NAME_STATE_LESSER_POLAND_wood: "Zamosc"
- HUB_NAME_STATE_MAZOVIA_city: "Warsaw"
+ HUB_NAME_STATE_MAZOVIA_city: "Warszawa"
  HUB_NAME_STATE_MAZOVIA_mine: "Siedlce"
  HUB_NAME_STATE_MAZOVIA_farm: "Lomza"
  HUB_NAME_STATE_MAZOVIA_wood: "Ostroleka"
- HUB_NAME_STATE_BREST_city: "Brest"
+ HUB_NAME_STATE_BREST_city: "Brzesc"
  HUB_NAME_STATE_BREST_mine: "Pinsk"
  HUB_NAME_STATE_BREST_farm: "Białystok"
  HUB_NAME_STATE_BREST_wood: "Grodno"
@@ -1872,62 +1872,62 @@
  HUB_NAME_STATE_MAINE_mine: "The Forks"
  HUB_NAME_STATE_MAINE_farm: "Bangor"
  HUB_NAME_STATE_MAINE_wood: "Kilmarnock"
- HUB_NAME_STATE_NEW_HAMPSHIRE_city: "Concord"
- HUB_NAME_STATE_NEW_HAMPSHIRE_port: "Portsmouth"
- HUB_NAME_STATE_NEW_HAMPSHIRE_mine: "Fairfield"
- HUB_NAME_STATE_NEW_HAMPSHIRE_farm: "Manchester"
- HUB_NAME_STATE_NEW_HAMPSHIRE_wood: "Bartlett"
- HUB_NAME_STATE_VERMONT_city: "Montpelier"
- HUB_NAME_STATE_VERMONT_mine: "Ludlow"
- HUB_NAME_STATE_VERMONT_farm: "Bennington"
- HUB_NAME_STATE_VERMONT_wood: "Burlington"
- HUB_NAME_STATE_MASSACHUSETTS_city: "Boston"
- HUB_NAME_STATE_MASSACHUSETTS_port: "Plymouth"
- HUB_NAME_STATE_MASSACHUSETTS_mine: "Springfield"
- HUB_NAME_STATE_MASSACHUSETTS_farm: "Worcester"
- HUB_NAME_STATE_MASSACHUSETTS_wood: "Greenfield"
- HUB_NAME_STATE_RHODE_ISLAND_city: "Providence"
- HUB_NAME_STATE_RHODE_ISLAND_port: "Newport"
+ HUB_NAME_STATE_NEW_HAMPSHIRE_city: "Sirmium"
+ HUB_NAME_STATE_NEW_HAMPSHIRE_port: "Salona"
+ HUB_NAME_STATE_NEW_HAMPSHIRE_mine: "Scupia"
+ HUB_NAME_STATE_NEW_HAMPSHIRE_farm: "Savaria"
+ HUB_NAME_STATE_NEW_HAMPSHIRE_wood: "Serdica"
+ HUB_NAME_STATE_VERMONT_city: "Agrippan"
+ HUB_NAME_STATE_VERMONT_mine: "Olisipa"
+ HUB_NAME_STATE_VERMONT_farm: "Segobrigia"
+ HUB_NAME_STATE_VERMONT_wood: "Treverorum"
+ HUB_NAME_STATE_MASSACHUSETTS_city: "Massilia"
+ HUB_NAME_STATE_MASSACHUSETTS_port: "Narbo"
+ HUB_NAME_STATE_MASSACHUSETTS_mine: "Avaricum"
+ HUB_NAME_STATE_MASSACHUSETTS_farm: "Vienna"
+ HUB_NAME_STATE_MASSACHUSETTS_wood: "Turonia"
+ HUB_NAME_STATE_RHODE_ISLAND_city: "Tridentia"
+ HUB_NAME_STATE_RHODE_ISLAND_port: "Gortynia"
   #HUB_NAME_STATE_RHODE_ISLAND_mine: "NAME"
- HUB_NAME_STATE_RHODE_ISLAND_farm: "Jamestown"
+ HUB_NAME_STATE_RHODE_ISLAND_farm: "Apollonia"
   #HUB_NAME_STATE_RHODE_ISLAND_wood: "NAME"
- HUB_NAME_STATE_CONNECTICUT_city: "Hartford"
- HUB_NAME_STATE_CONNECTICUT_port: "New Haven"
+ HUB_NAME_STATE_CONNECTICUT_city: "Lindum"
+ HUB_NAME_STATE_CONNECTICUT_port: "Corinia"
   #HUB_NAME_STATE_CONNECTICUT_mine: "NAME"
- HUB_NAME_STATE_CONNECTICUT_farm: "Stamford"
- HUB_NAME_STATE_CONNECTICUT_wood: "Cos Cob"
- HUB_NAME_STATE_NEW_YORK_city: "Eboracum"
- HUB_NAME_STATE_NEW_YORK_port: "Montauk"
- HUB_NAME_STATE_NEW_YORK_mine: "Binghamton"
+ HUB_NAME_STATE_CONNECTICUT_farm: "Durocortorium"
+ HUB_NAME_STATE_CONNECTICUT_wood: "Rotomagnia"
+ HUB_NAME_STATE_NEW_YORK_city: "Néa Athína"
+ HUB_NAME_STATE_NEW_YORK_port: "Néa Ródos"
+ HUB_NAME_STATE_NEW_YORK_mine: "Thorikos"
  HUB_NAME_STATE_NEW_YORK_farm: "Syracuse"
- HUB_NAME_STATE_NEW_YORK_wood: "Albany"
- HUB_NAME_STATE_NEW_JERSEY_city: "Trenton"
- HUB_NAME_STATE_NEW_JERSEY_port: "Newark"
- HUB_NAME_STATE_NEW_JERSEY_mine: "Morristown"
- HUB_NAME_STATE_NEW_JERSEY_farm: "Bridgeton"
- HUB_NAME_STATE_NEW_JERSEY_wood: "Stafford"
- HUB_NAME_STATE_PENNSYLVANIA_city: "Philadelphia"
- HUB_NAME_STATE_PENNSYLVANIA_mine: "Pittsburgh"
- HUB_NAME_STATE_PENNSYLVANIA_farm: "Harrisburg"
- HUB_NAME_STATE_PENNSYLVANIA_wood: "Erie"
- HUB_NAME_STATE_DELAWARE_city: "Wilmington"
- HUB_NAME_STATE_DELAWARE_port: "Dover"
- HUB_NAME_STATE_DELAWARE_farm: "Middletown"
- HUB_NAME_STATE_MARYLAND_city: "Baltimore"
- HUB_NAME_STATE_MARYLAND_port: "Annapolis"
- HUB_NAME_STATE_MARYLAND_mine: "Cumberland"
- HUB_NAME_STATE_MARYLAND_farm: "Easton"
- HUB_NAME_STATE_MARYLAND_wood: "Fredrick"
+ HUB_NAME_STATE_NEW_YORK_wood: "Eboracum"
+ HUB_NAME_STATE_NEW_JERSEY_city: "Caralia"
+ HUB_NAME_STATE_NEW_JERSEY_port: "Aleria"
+ HUB_NAME_STATE_NEW_JERSEY_mine: "Sardum"
+ HUB_NAME_STATE_NEW_JERSEY_farm: "Adiacium"
+ HUB_NAME_STATE_NEW_JERSEY_wood: "Sullia"
+ HUB_NAME_STATE_PENNSYLVANIA_city: "Parisiorum"
+ HUB_NAME_STATE_PENNSYLVANIA_mine: "Lutetia"
+ HUB_NAME_STATE_PENNSYLVANIA_farm: "Lugudunum"
+ HUB_NAME_STATE_PENNSYLVANIA_wood: "Avaricum"
+ HUB_NAME_STATE_DELAWARE_city: "Tarraco"
+ HUB_NAME_STATE_DELAWARE_port: "Ascrivium"
+ HUB_NAME_STATE_DELAWARE_farm: "Ariminum"
+ HUB_NAME_STATE_MARYLAND_city: "Aelia Capitolina"
+ HUB_NAME_STATE_MARYLAND_port: "Stratonis"
+ HUB_NAME_STATE_MARYLAND_mine: "Pella"
+ HUB_NAME_STATE_MARYLAND_farm: "Galilaea"
+ HUB_NAME_STATE_MARYLAND_wood: "Hippos"
  HUB_NAME_STATE_DISTRICT_OF_COLUMBIA_city: "Elysium"
  HUB_NAME_STATE_DISTRICT_OF_COLUMBIA_port: "Ostium"
   #HUB_NAME_STATE_DISTRICT_OF_COLUMBIA_mine: "NAME"
  HUB_NAME_STATE_DISTRICT_OF_COLUMBIA_farm: "Praedium"
   #HUB_NAME_STATE_DISTRICT_OF_COLUMBIA_wood: "NAME"
- HUB_NAME_STATE_VIRGINIA_city: "Arcadia"
- HUB_NAME_STATE_VIRGINIA_port: "Norfolk"
- HUB_NAME_STATE_VIRGINIA_mine: "Lynchburg"
- HUB_NAME_STATE_VIRGINIA_farm: "Fredricksburg"
- HUB_NAME_STATE_VIRGINIA_wood: "Big Lick"
+ HUB_NAME_STATE_VIRGINIA_city: "Arcadiastu"
+ HUB_NAME_STATE_VIRGINIA_port: "Colonia Haliae"
+ HUB_NAME_STATE_VIRGINIA_mine: "Maiapum"
+ HUB_NAME_STATE_VIRGINIA_farm: "Daphnurbum"
+ HUB_NAME_STATE_VIRGINIA_wood: "Colonia Faunia"
  HUB_NAME_STATE_WEST_VIRGINIA_city: "Charleston"
  HUB_NAME_STATE_WEST_VIRGINIA_mine: "Holderby's Landing"
  HUB_NAME_STATE_WEST_VIRGINIA_farm: "Harper's Ferry"
