fix: avoid reusing localization keys
This commit solves the following error:

```
[pdx_localize.cpp:197]: Duplicate localization
key. Key 'separation_of_powers' is defined in both
'localization/english/br_technology_l_english.yml'
and
'localization/english/inventions_l_english.yml'.
```

The fix is to simply rename the conflicting keys.

--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  # Agriculture
- four_field_crop_rotation: "Four-Field Crop Rotation"
- four_field_crop_rotation_desc: "A system of crop rotation that allows for the cultivation of four different crops in four different fields, which helps to maintain soil fertility."
+ br_tech_four_field_crop_rotation: "Four-Field Crop Rotation"
+ br_tech_four_field_crop_rotation_desc: "A system of crop rotation that allows for the cultivation of four different crops in four different fields, which helps to maintain soil fertility."
  rotherham_plough: "Rotherham Plough"
  rotherham_plough_desc: "A type of plough that was used in the 18th century and was designed to be pulled by horses. It was a significant improvement over the traditional plough."
  new_world_crops: "New World Crops"
@@ -58,8 +58,8 @@
  rights_of_man_desc: "The idea that all human beings are entitled to certain rights and freedoms, such as liberty, equality, and justice."
  divine_right: "Divine Right"
  divine_right_desc: "The belief that a monarch's authority to rule comes directly from God."
- separation_of_powers: "Separation of Powers"
- separation_of_powers_desc: "The idea of distinct branches of government with different roles which oversee one another to prevent corruption and abuse has become vastly more popular since the relative success of the 'great American experiment', with her Constitution splitting the government into executive, legislative and judicial branches."
+ br_tech_separation_of_powers: "Separation of Powers"
+ br_tech_separation_of_powers_desc: "The idea of distinct branches of government with different roles which oversee one another to prevent corruption and abuse has become vastly more popular since the relative success of the 'great American experiment', with her Constitution splitting the government into executive, legislative and judicial branches."
  early_modern_universities: "Early Modern Universities"
  early_modern_universities_desc: "Institutions of higher learning that emerged in Europe during the late Middle Ages and early modern period. They were centers of scholarship and research."
  natural_history: "Natural History"
