fix: minor localization fixes
This commit adds a missing localization key for
`hostile_climate_colonization_desc` and deletes
unused keys.

--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -64,6 +64,8 @@
  early_modern_universities_desc: "Institutions of higher learning that emerged in Europe during the late Middle Ages and early modern period. They were centers of scholarship and research."
  natural_history: "Natural History"
  natural_history_desc: "The study of plants, animals, and minerals, with a focus on classification, description, and observation."
+ hostile_climate_colonization: "Early Hostile Climate Colonization"
+ hostile_climate_colonization_desc: "Allows earlier colonization of provinces with a hostile climate."
 
  # Military
  supply_train: "Supply Train"
