fixes: fixes, tech, hubnames
- fixes multiple decentralized nations having laws they are not supposed to. These nations did not have set history files so they were defaulting to the most regressive laws.
- Fixed an error related to frontier colonization to no longer require your homelands in the states your colonizing.
- More hub names

--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -94,3 +94,5 @@
  careening_desc: "A process in which a ship is heeled over on its side to clean and repair its hull. It was commonly used by European navies in the 17th and 18th centuries."
  three_deckers: "Three-Deckers"
  three_deckers_desc: "A type of warship that had three gun decks and was used by European navies in the 17th and 18th centuries. Three-deckers were powerful but slow and difficult to maneuver."
+ tech_cavalry_specialization: "Cavalry Diversification"
+ tech_cavalry_specialization_desc: "During the 18-19th century, cavalry soldiers underwent significant changes due to advancements in technology and warfare tactics. The widespread use of firearms and artillery posed new challenges for cavalry units. As a result, their role shifted from traditional charges to more flexible and diversified roles."
