--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -1928,14 +1928,14 @@
  HUB_NAME_STATE_VIRGINIA_mine: "Maiapum"
  HUB_NAME_STATE_VIRGINIA_farm: "Daphnurbum"
  HUB_NAME_STATE_VIRGINIA_wood: "Colonia Faunia"
- HUB_NAME_STATE_WEST_VIRGINIA_city: "Charleston"
- HUB_NAME_STATE_WEST_VIRGINIA_mine: "Holderby's Landing"
- HUB_NAME_STATE_WEST_VIRGINIA_farm: "Harper's Ferry"
- HUB_NAME_STATE_WEST_VIRGINIA_wood: "Morgantown"
- HUB_NAME_STATE_OHIO_city: "Columbus"
- HUB_NAME_STATE_OHIO_mine: "Athens"
- HUB_NAME_STATE_OHIO_farm: "Toledo"
- HUB_NAME_STATE_OHIO_wood: "Cincinnati"
+ HUB_NAME_STATE_WEST_VIRGINIA_city: "Oenia Pontium"
+ HUB_NAME_STATE_WEST_VIRGINIA_mine: "Helveticae Nova"
+ HUB_NAME_STATE_WEST_VIRGINIA_farm: "Brigantium"
+ HUB_NAME_STATE_WEST_VIRGINIA_wood: "Novodunia"
+ HUB_NAME_STATE_OHIO_city: "Shawneentum"
+ HUB_NAME_STATE_OHIO_mine: "Muskingum"
+ HUB_NAME_STATE_OHIO_farm: "Erietium"
+ HUB_NAME_STATE_OHIO_wood: "Ohiyopolis"
  HUB_NAME_STATE_MICHIGAN_city: "Detroit"
  HUB_NAME_STATE_MICHIGAN_mine: "Houghton"
  HUB_NAME_STATE_MICHIGAN_farm: "Lansing"
@@ -1948,18 +1948,18 @@
  HUB_NAME_STATE_ILLINOIS_mine: "Peoria"
  HUB_NAME_STATE_ILLINOIS_farm: "Springfield"
  HUB_NAME_STATE_ILLINOIS_wood: "Rockford"
- HUB_NAME_STATE_INDIANA_city: "Indianapolis"
- HUB_NAME_STATE_INDIANA_mine: "Evansville"
- HUB_NAME_STATE_INDIANA_farm: "Fort Wayne"
- HUB_NAME_STATE_INDIANA_wood: "Lawrenceburg"
- HUB_NAME_STATE_KENTUCKY_city: "Lexington"
- HUB_NAME_STATE_KENTUCKY_mine: "Pikeville"
- HUB_NAME_STATE_KENTUCKY_farm: "Henderson"
- HUB_NAME_STATE_KENTUCKY_wood: "Louisville"
- HUB_NAME_STATE_TENNESSEE_city: "Nashville"
- HUB_NAME_STATE_TENNESSEE_mine: "Knoxville"
- HUB_NAME_STATE_TENNESSEE_farm: "Memphis"
- HUB_NAME_STATE_TENNESSEE_wood: "Chattanooga"
+ HUB_NAME_STATE_INDIANA_city: "Myaamipolis"
+ HUB_NAME_STATE_INDIANA_mine: "Salamonatum"
+ HUB_NAME_STATE_INDIANA_farm: "Giwanipidum"
+ HUB_NAME_STATE_INDIANA_wood: "Mihsiiwicae"
+ HUB_NAME_STATE_KENTUCKY_city: "Aegae"
+ HUB_NAME_STATE_KENTUCKY_mine: "Vergína"
+ HUB_NAME_STATE_KENTUCKY_farm: "Alexándreia Ilysíon"
+ HUB_NAME_STATE_KENTUCKY_wood: "Pella"
+ HUB_NAME_STATE_TENNESSEE_city: "Tanasiae"
+ HUB_NAME_STATE_TENNESSEE_mine: "Chatonae"
+ HUB_NAME_STATE_TENNESSEE_farm: "Sawanodum"
+ HUB_NAME_STATE_TENNESSEE_wood: "Unicoipolis"
  HUB_NAME_STATE_NORTH_CAROLINA_city: "Raleigh"
  HUB_NAME_STATE_NORTH_CAROLINA_port: "Wilmington"
  HUB_NAME_STATE_NORTH_CAROLINA_mine: "Asheville"
