refactor: move arabia modifiers to separate file
This commit also renames the modifiers for
increased readability and consistency.

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -15,10 +15,10 @@
  romaioi_colonial_subsidies: "Colonial Subsidies"
  colonial_ferver: "Colonial Ferver"
  religious_chaos: "Religious Chaos"
- romaioi_jihad: "Jihad Called"
+ br_modifier_jihad_called: "Jihad Called"
  decentralized_khanate: "Decentralized Khanate"
  merchant_republic: "Merchant State"
- arab_caliphate: "Abbasid Caliphate"
+ br_modifier_arab_caliphate: "Abbasid Caliphate"
  romaioi_pentarchy: "Ecumenical Patriarch"
  pope: "Patriarch of Rome"
  patriarch_alexandria: "Patriarch Alexandria"
@@ -34,7 +34,7 @@
  spice_income: "Spice Trade"
  eet_spice_dividends: "EET dividend income"
  hajj: "Hajj"
- holy_warriors: "Holy Warriors"
+ br_modifier_holy_warriors: "Holy Warriors"
  tribal_warriors: "Tribal Warriors"
  boyars: "Boyars"
  cossacks: "Cossacks"
