--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -138,6 +138,14 @@
  EVK_ADJ: "Evenki"
  RYU: "Ryukyu Kingdom"
  RYU_ADJ: "Ryukyun"
+
+
+ C01: "Circassia"
+ C01_ADJ: "Circassian"
+ C02: "Alania"
+ C02_ADJ: "Alan"
+ C03: "Dagestan"
+ C03_ADJ: "Dagestani"
  
  #Renamed base game nations need to be renamed at countries_1_english in replace folder
 
