--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -23,8 +23,8 @@
  BER_ADJ: "Gujarat"
  BOS: "Bosnia"
  BOS_ADJ: "Bosnian"
- BUK: "Khorasan"
- BUK_ADJ: "Khorasani"
+ #BUK: "Khorasan"
+ #BUK_ADJ: "Khorasani"
  BUL: "Bulgaria"
  BUL_ADJ: "Bulgarian"
  BYZ: "Basileía Romaíon"
@@ -52,8 +52,6 @@
  CYP_ADJ: "Cypriot"
  CZH: "Bohemia"
  CZH_ADJ: "Bohemian"
- C03: "Dagestan"
- C03_ADJ: "Dagestani"
  DEN: "North Sea Empire"
  DEN_ADJ: "Danish"
  ETH: "Abyssinia"
@@ -86,8 +84,8 @@
  JAP_ADJ: "Japanese"
  JAV: "Majapahit"
  JAV_ADJ: "Majapahit"
- KHI: "Khwarazm"
- KHI_ADJ: "Khwarezmian"
+ #KHI: "Khwarazm"
+ #KHI_ADJ: "Khwarezmian"
  KUR: "Arbil"
  KUR_ADJ: "Kurd"
  #LOU: "Nova Francia"
@@ -168,10 +166,6 @@
  DEI_ADJ: "Dutch East Indies"
  PWN: "Chahiksichahiks"
  PWN_ADJ: "Chahiksichahiks"
- C02: "Chechnya"
- C02_ADJ: "Chechen"
- C01: "Circassia"
- C01_ADJ: "Circassian"
  ASS: "Assyria"
  ASS_ADJ: "Assyrian"
  CTF: "Niswa-mishkodewinan"
