--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -196,7 +196,7 @@
  STATE_CONSTANTINE: "Qusantinah"
  STATE_TRIPOLI: "Tripolitania"
  STATE_LIBYAN_DESERT: "Libyan Desert"
- STATE_LIBYA: "Cyrenaica"
+ STATE_LIBYA: "Kyrenaica"
  STATE_UPPER_EGYPT: "Upper Egypt"
  STATE_EGYPTIAN_DESERT: "Egyptian Desert"
  STATE_LOWER_EGYPT: "Lower Egypt"
@@ -396,19 +396,23 @@
  STATE_BAGHDAD: "Baghdad"
  STATE_BASRA: "Basra"
  STATE_MOSUL: "Mosul"
- STATE_LARISTAN: "Laristan"
- STATE_SISTAN: "Sistan"
+ STATE_LARISTAN: "Hormuz"
+ STATE_KERMAN: "Kerman"
+ STATE_SISTAN: "Bampur"
  STATE_KHORASAN: "Khorasan"
  STATE_KHUZESTAN: "Khuzestan"
  STATE_FARS: "Fars"
  STATE_ISFAHAN: "Isfahan"
  STATE_MAZANDARAN: "Mazandaran"
- STATE_IRAKAJEMI: "Irakajemi"
+ STATE_IRAKAJEMI: "Irak-i-Ajami"
+ STATE_SEMNAN: "Semnan"
  STATE_TABRIZ: "Tabriz"
+ STATE_URMIA: "Urmia"
  STATE_LURISTAN: "Luristan"
+ STATE_PERSIAN_KURDISTAN: "Persian Kurdistan"
  STATE_ARMENIA: "Eastern Armenia"
- STATE_AZERBAIJAN: "Azerbaijan"
- STATE_GREATER_CAUCASUS: "Sakartvelo"
+ STATE_AZERBAIJAN: "Baku"
+ STATE_GREATER_CAUCASUS: "Tiflis"
  STATE_MONTENEGRO: "Montenegro"
  STATE_NORTHERN_SERBIA: "Northern Serbia"
  STATE_SOUTHERN_SERBIA: "Southern Serbia"
@@ -422,11 +426,17 @@
  STATE_WEST_AEGEAN_ISLANDS: "West Aegean Islands"
  STATE_EAST_AEGEAN_ISLANDS: "East Aegean Islands"
  STATE_ANKARA: "Kappadokia"
- STATE_WESTERN_AFGHANISTAN: "Western Afghanistan"
+ STATE_KANDAHAR: "Kandahar"
+ STATE_QUETTA: "Quetta"
+ STATE_NORTHERN_BALUCHISTAN: "Northern Baluchistan"
+ STATE_HERAT: "Herat"
+ STATE_BALKH: "Southern Turkestan"
+ STATE_BADAKHSHAN: "Badakhshan"
  STATE_DIYARBAKIR: "Mesopotamia"
  STATE_ERZURUM: "Vasprakania"
  STATE_KARS: "Iberia"
- STATE_EASTERN_AFGHANISTAN: "Eastern Afghanistan"
+ STATE_KABUL: "Kabulistan"
+ STATE_CENTRAL_HIGHLANDS: "Hazaristan"
  STATE_BANGKOK: "Bangkok"
  STATE_MEKONG: "Mekong"
  STATE_TONKIN: "Tonkin"
@@ -452,7 +462,7 @@
  STATE_NGARI: "Ngari"
  STATE_HIMALAYAS: "Himalayas"
  STATE_DZUNGARIA: "Dzungaria"
- STATE_TIANSHAN: "Tianshan"
+ STATE_TIANSHAN: "Tarim Basin"
  STATE_SICHUAN: "Sichuan"
  STATE_YUNNAN: "Yunnan"
  STATE_GUIZHOU: "Guizhou"
@@ -485,20 +495,16 @@
  STATE_EASTERN_HUBEI: "Eastern Hubei"
  STATE_HUNAN: "Hunan"
  STATE_FORMOSA: "Formosa"
- STATE_SOUTHERN_FINLAND: "Southern Finland"
  STATE_OSTROBOTHNIA: "Ostrobothnia"
  STATE_WEST_KARELIA: "West Karelia"
- STATE_ESTONIA: "Estonia"
- STATE_LATVIA: "Latvia"
- STATE_LITHUANIA: "Lithuania"
- STATE_CHUKOTKA: "Chiburi"
+ STATE_CHUKOTKA: "Chukotka"
  STATE_NENETSIA: "Nenetsia"
  STATE_EAST_KARELIA: "East Karelia"
  STATE_ARKHANGELSK: "Arkhangelsk"
  STATE_TARTARIA: "Saratov"
- STATE_OUTER_MANCHURIA: "Outer Manchuria"
+ STATE_OUTER_MANCHURIA: "Primorye"
  STATE_UZBEKIA: "Uzbekia"
- STATE_KHIVA: "Khiva"
+ STATE_KHIVA: "Chorasmia"
  STATE_TAJIKISTAN: "Tajikistan"
  STATE_KIRGHIZIA: "Kirghizia"
  STATE_URALSK: "Uralsk"
@@ -508,7 +514,7 @@
  STATE_KAMCHATKA: "Chishima Torai"
  STATE_OKHOTSK: "Hokutou"
  STATE_YAKUTSK: "Etorofu"
- STATE_TRANS_BAIKAL: "Trans-Baikal"
+ STATE_TRANS_BAIKAL: "Chita"
  STATE_IRKUTSK: "Irkutsk"
  STATE_TOMSK: "Tomsk"
  STATE_TOBOLSK: "Tobolsk"
@@ -518,7 +524,7 @@
  STATE_SAMARA: "Samara"
  STATE_KAZAN: "Kazan"
  STATE_PERM: "Perm"
- STATE_GALICH: "Galich"
+ STATE_GALICH: "Vologda"
  STATE_TVER: "Tver"
  STATE_MOSCOW: "Moscow"
  STATE_DAGESTAN: "Dagestan"
@@ -526,15 +532,13 @@
  STATE_ASTRAKHAN: "Astrakhan"
  STATE_ROSTOV: "Rostov"
  STATE_CRIMEA: "Crimea"
- STATE_LUHANSK: "Luhansk"
+ STATE_KHARKOV: "Kharkiv"
  STATE_KURSK: "Kursk"
  STATE_NOVGOROD: "Novgorod"
  STATE_INGRIA: "Ingria"
- STATE_CHERSON: "Cherson"
+ STATE_CHERSON: "Odessa"
  STATE_BESSARABIA: "Bessarabia"
- STATE_BRYANSK: "Bryansk"
  STATE_SMOLENSK: "Smolensk"
- STATE_ORSHA: "Orsha"
  STATE_CAMPANIA: "Campania"
  STATE_CALABRIA: "Calabria"
  STATE_ABRUZZO: "Abruzzo"
@@ -580,15 +584,15 @@
  STATE_SAXONY: "Meissen"
  STATE_HESSE: "Hesse"
  STATE_BRUNSWICK: "Brunswick"
- STATE_GREATER_POLAND: "Wielkopolska"
- STATE_LESSER_POLAND: "Malopolska"
+ STATE_GREATER_POLAND: "Warszawa"
+ STATE_LESSER_POLAND: "Lublin"
  STATE_PIEDMONT: "Piedmont"
  STATE_SARDINIA: "Sardinia"
  STATE_SAKHALIN: "Karafuto"
  STATE_TARAPACA: "Tarapacá"
  STATE_ANTOFAGASTA: "Antofagasta"
- STATE_BREST: "Brest"
- STATE_MAZOVIA: "Mazowsze"
+ STATE_BREST: "Grodno"
+ STATE_MAZOVIA: "Mazovia"
  STATE_VOLHYNIA: "Volhynia"
  STATE_KIEV: "Kiev"
  STATE_RIAU_ISLANDS: "Riau Islands"
@@ -729,3 +733,43 @@
  STATE_OAXACA: "Oaxaca"
  STATE_SHENGJING: "Shengjing"
  STATE_JETISY: "Ili"
+ STATE_RUHR: "Ruhr"
+ STATE_MAINE_ANJOU: "Maine-Anjou"
+ STATE_VILNIUS: "Vilnius"
+ STATE_COURLAND: "Courland"
+ STATE_TARTU: "North Livonia"
+ STATE_TALINN: "Revel"
+ STATE_RIGA: "South Livonia"
+ STATE_KAUNAS: "Kaunas"
+ STATE_FERGANA: "Fergana"
+ STATE_MERZ: "Merv"
+ STATE_SYRDARYA: "Syrdarya"
+ STATE_AKTOBE: "Aktobe"
+ STATE_KALMYKIA: "Kalmykia"
+ STATE_NORTH_CAUCASUS: "North Caucasus"
+ STATE_TAURIDA: "Aleksandrovsk"
+ STATE_TAMBOV: "Tambov"
+ STATE_RYAZAN: "Ryazan"
+ STATE_VITEBSK: "Vitebsk"
+ STATE_PSKOV: "Pskov"
+ STATE_YAROSLAVL: "Yaroslavl"
+ STATE_NIZHNY_NOVGOROD: "Nizhny Novgorod"
+ STATE_VYATKA: "Vyatka"
+ STATE_UFA: "Ufa"
+ STATE_SURGUT: "Surgut"
+ STATE_KRASNOYARSK: "Krasnoyarsk"
+ STATE_ALTAI: "Altai"
+ STATE_BURYATIA: "Buryatia"
+ STATE_KOLYMA: "Kolyma"
+ STATE_AMUR: "Amur"
+ STATE_CHELYABINSK: "Chelyabinsk"
+ STATE_KUOPIO: "Kuopio"
+ STATE_OULU: "Oulu"
+ STATE_UUSIMAA: "Uusimaa"
+ STATE_KOLA: "Kola"
+ STATE_MOGILEV: "Mogilev"
+ STATE_ORYOL: "Tula"
+ STATE_ELIZAVETPOL: "Elizavetpol"
+ STATE_STAVROPOL: "Stavropol"
+ STATE_CHUVASHIA: "Cheboksary"
+ STATE_CHERNIHIV: "Chernihiv"
