--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -58,8 +58,22 @@
  TVE_ADJ: "Tverite"
  NZH: "Nizhny Novgorod"
  NZH_ADJ: "Nizhegorodian"
- UGG: "Galich"
- UGG_ADJ: "Galichian"
+ PLK: "Polotsk"
+ PLK_ADJ: "Polotsk"
+ KIE: "Kiev"
+ KIE_ADJ: "Kievan"
+ CHV: "Chernigov"
+ CHV_ADJ: "Chernigov"
+ PNK: "Turov-Pinsk"
+ PNK_ADJ: "Turov and Pinsk"
+ SBR: "Sibir"
+ SBR_ADJ: "Sibir"
+ TVE: "Tver"
+ TVE_ADJ: "Tverite"
+ NZH: "Nizhny Novgorod"
+ NZH_ADJ: "Nizhegorodian"
+ UGG: "Yaroslavl"
+ UGG_ADJ: "Yaroslavl"
  NSE: "Jämland Härjedalen"
  NSE_ADJ: "Jämland Härjedalen"
  ARD: "Ardalan"
