--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -207,11 +207,11 @@
  HUB_NAME_STATE_WEST_COUNTRY_mine: "Gloucestre"
  HUB_NAME_STATE_WEST_COUNTRY_farm: "Taunton"
  HUB_NAME_STATE_WEST_COUNTRY_wood: "Barnstaple"
- HUB_NAME_STATE_WALES_city: "Cardiff"
- HUB_NAME_STATE_WALES_port: "Swansea"
+ HUB_NAME_STATE_WALES_city: "Caerdydd"
+ HUB_NAME_STATE_WALES_port: "Abertawe"
  HUB_NAME_STATE_WALES_mine: "Merthyr Tydfil"
- HUB_NAME_STATE_WALES_farm: "Carmarthen"
- HUB_NAME_STATE_WALES_wood: "Porthmadog"
+ HUB_NAME_STATE_WALES_farm: "Caerfyrddin"
+ HUB_NAME_STATE_WALES_wood: "Blaenau Ffestinog"
  HUB_NAME_STATE_MIDLANDS_city: "Beormingahām"
  HUB_NAME_STATE_MIDLANDS_port: "Grimsby"
  HUB_NAME_STATE_MIDLANDS_mine: "Snotingaham"
