--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -840,7 +840,7 @@
  HUB_NAME_STATE_KAZAN_mine: "Almetyevsk" #14-11-2023
  HUB_NAME_STATE_KAZAN_farm: "Chistopol" #14-11-2023
  HUB_NAME_STATE_KAZAN_wood: "Yelabuga" #14-11-2023
- HUB_NAME_STATE_TARTARIA_city: "Saratov" #14-11-2023
+ HUB_NAME_STATE_TARTARIA_city: "Sarai" #14-11-2023
  HUB_NAME_STATE_TARTARIA_mine: "Novouzensk" #14-11-2023
  HUB_NAME_STATE_TARTARIA_farm: "Simbirsk" #14-11-2023
  HUB_NAME_STATE_TARTARIA_wood: "Balashov" #14-11-2023
