--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -501,7 +501,7 @@
  STATE_NENETSIA: "Nenetsia"
  STATE_EAST_KARELIA: "East Karelia"
  STATE_ARKHANGELSK: "Arkhangelsk"
- STATE_TARTARIA: "Saratov"
+ STATE_TARTARIA: "Sarai"
  STATE_OUTER_MANCHURIA: "Primorye"
  STATE_UZBEKIA: "Uzbekia"
  STATE_KHIVA: "Chorasmia"
