--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -1415,7 +1415,6 @@
  HUB_NAME_STATE_ARMENIA_wood: "Nakhchivan"
    
  HUB_NAME_STATE_ERZURUM_city: "Theodosiopolis"
-  #HUB_NAME_STATE_ERZURUM_port: "NAME"
  HUB_NAME_STATE_ERZURUM_mine: "Vaspakania"
  HUB_NAME_STATE_ERZURUM_farm: "Manzikert"
  HUB_NAME_STATE_ERZURUM_wood: "Derzene"
@@ -1429,8 +1428,8 @@
  HUB_NAME_STATE_TRABZON_mine: "Rhizus"
  HUB_NAME_STATE_TRABZON_farm: "Koloneia"
  HUB_NAME_STATE_TRABZON_wood: "Athenae"
- HUB_NAME_STATE_ANKARA_city: "Karsianon"
- HUB_NAME_STATE_ANKARA_mine: "Yozgat"
+ HUB_NAME_STATE_ANKARA_city: "Kaesarea"
+ HUB_NAME_STATE_ANKARA_mine: "Karsianon"
  HUB_NAME_STATE_ANKARA_farm: "Sebastea"
  HUB_NAME_STATE_ANKARA_wood: "Anacyra"
  HUB_NAME_STATE_KASTAMONU_city: "Amastris"
@@ -1442,7 +1441,7 @@
  HUB_NAME_STATE_HUDAVENDIGAR_port: "Nicomedia"
  HUB_NAME_STATE_HUDAVENDIGAR_mine: "Bilecik"
  HUB_NAME_STATE_HUDAVENDIGAR_farm: "Prousa"
- HUB_NAME_STATE_HUDAVENDIGAR_wood: "Dorylaion"
+ HUB_NAME_STATE_HUDAVENDIGAR_wood: "Kotylaion"
  HUB_NAME_STATE_EASTERN_THRACE_city: "Konstantinopolis"
  HUB_NAME_STATE_EASTERN_THRACE_port: "Galipoli"
  HUB_NAME_STATE_EASTERN_THRACE_mine: "Arkadiopolis"
@@ -1455,9 +1454,9 @@
  HUB_NAME_STATE_AYDIN_wood: "Chonai"
  HUB_NAME_STATE_KONYA_city: "Iconium"
  HUB_NAME_STATE_KONYA_port: "Attaleia"
- HUB_NAME_STATE_KONYA_mine: "Afyon"
- HUB_NAME_STATE_KONYA_farm: "Kaesarea"
- HUB_NAME_STATE_KONYA_wood: "Amorion"
+ HUB_NAME_STATE_KONYA_mine: "Amorion"
+ HUB_NAME_STATE_KONYA_farm: "Laodicea"
+ HUB_NAME_STATE_KONYA_wood: "Dorylaion"
  HUB_NAME_STATE_CYPRUS_city: "Nicosia"
  HUB_NAME_STATE_CYPRUS_port: "Larnaca"
  HUB_NAME_STATE_CYPRUS_farm: "Lefke"
