fix: add missing localization key

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -13,6 +13,7 @@
  romaioi_themata_primacy: "Themata Primacy"
  romaioi_varangian_primacy: "Varangian Primacy"
  romaioi_colonial_subsidies: "Colonial Subsidies"
+ romaioi_military_reorganization: "Military Reorganization"
  colonial_ferver: "Colonial Ferver"
  religious_chaos: "Religious Chaos"
  br_modifier_jihad_called: "Jihad Called"
