fix: journal entry spelling
The titles looks weird with fullstops at the end.
This commit removes them.

--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -2,9 +2,9 @@
 
  #romaioi decisions 
 
- end_latin_privileges: "End Latin Trade Privileges."
+ end_latin_privileges: "End Latin Trade Privileges"
  end_latin_privileges_desc: "The Latins have enjoyed an unfair monopoly on our trade for too long."
- end_latin_privileges_ELY: "End Latin Trade Privileges."
+ end_latin_privileges_ELY: "End Latin Trade Privileges"
  end_latin_privileges_ELY_desc: "The Latins have enjoyed an unfair monopoly on our trade for too long."
  fight_corruption: "Fight Systemic Corruption"
  fight_corruption_desc: "Fighting the corruption that runs rampant in all levels of government won't be easy many entrenched elites benefit from the status quo and may revolt."
