--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -253,3 +253,19 @@
  ere_re_name_tt: "Name of our country will be changed to 'Roman Empire'"
  ere_ere_name_tt: "Name of our country will be changed to 'Eastern Roman Empire'"
 
+ #Power Blocs
+ Romaion_Bloc: "Romaion Commonwealth"
+ Imperial_HRE: "Universum Regnum"
+ Venetia_Trade_League: "Venetian League"
+ Genoa_Trade_League: "Genoan League"
+ Amsterdam_Alliance: "Amsterdam Alliance"
+ Alexandria_Accords: "Alexandria Accords"
+ Analusian_league: "Analusian League"
+ Mughal_Hegemony: "Mughal Hegemony"
+ Khanate: "Tatar Yoke"
+ North_Sea_Empire: "North Sea Empire"
+ Stockholm_Sphere: "Stockholm Sphere"
+ Danube_Pact: "Danube Pact"
+ Commonwealth: "Commonwealth"
+
+
