--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -292,8 +292,6 @@
  DX1_ADJ: "Deg Xitʼan"
  G03: "Gwichʼin"
  G03_ADJ: "Gwichʼin"
- HH2: "Hän Hwëch'in"
- HH2_ADJ: "Hän Hwëch'in"
  I02: "IiyaaGdaad"
  I02_ADJ: "IiyaaGdaad"
  IN1: "Iñupiat Nunaat"
@@ -304,8 +302,6 @@
  N07_ADJ: "Nunapet"
  S11: "Sugpiaq"
  S11_ADJ: "Sugpiaq"
- T03: "Tanana"
- T03_ADJ: "Tanana"
  UN2: "Unangam Tanangin"
  UN2_ADJ: "Unangam"
  X01: "X̱aayda"
@@ -314,8 +310,8 @@
  Y02_ADJ: "Yupighyt"
  A01: "Atna Nenn'"
  A01_ADJ: "Atna"
- DH6: "Dakelh-ne"
- D04_ADJ: "Dakelh-ne"
+ DH6: "Tŝilhqotʼin"
+ D04_ADJ: "Tŝilhqotʼin"
  DC1: "Deh Cho"
  DC1_ADJ: "Deh Cho"
  DZ1: "Dane-Zaa"
@@ -326,8 +322,6 @@
  KD1_ADJ: "Kaska"
  SD1: "Tsek'ene Dene"
  SD1_ADJ: "Tsek'ene"
- T07: "Tŝilhqotʼin"
- T07_ADJ: "Tŝilhqotʼin"
  TY1: "Tsúūt'ínà Yīná"
  TY1_ADJ: "Tsúūt'ínà"
  W95: "Haida"
@@ -360,20 +354,14 @@
  D03_ADJ: "Denésoliné"
  K04: "Kitlinermiut"
  K04_ADJ: "Kitlinermiut"
- KG1: "K'a so Got’ine"
- KG1_ADJ: "K'a so Got’ine"
  S13: "Sahtúot’ine"
  S13_ADJ: "Sahtúot’ine"
  SG1: "Shita Got’ine"
  SG1_ADJ: "Shita Got’ine"
- T04: "Ndé"
- T04_ADJ: "Tłichǫ"
- T05: "T'satsąot'ınę"
- T05_ADJ: "T'satsąot'ınę"
+ T05: "Tłichǫ"
+ T05_ADJ: "Tłichǫ"
  A05: "Aivilingmiut"
  A05_ADJ: "Aivilingmiut"
- K05: "Kivallirmiutut"
- K05_ADJ: "Kivallirmiutut"
  N08: "Netsilik"
  N08_ADJ: "Netsilik"
  Q01: "Qikiqtaaluk"
