--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -20,14 +20,21 @@
  taino: "Taino"
 
  #Colonial Cultures todo come up with unique names.
- colonial_french: "Colonial French"
- colonial_italian: "Colonial Italian"
- colonial_german: "Colonial German"
- colonial_dutch: "Colonial Dutch"
+ colonial_french: "Colonial-French"
+ colonial_italian: "Colonial-Italian"
+ colonial_german: "Colonial-German"
+ colonial_dutch: "Colonial-Dutch"
  colonial_british: "New Anglander"
  colonial_andalusian: "New Grenadian"
- colonial_japanese: "Colonial Japanese"
- colonial_chinese: "Colonial Chinese"
+ colonial_japanese: "Colonial-Japanese"
+ colonial_chinese: "Colonial-Chinese"
+
+ #Afro Cultures.
+ afro_french: "Afro-French"
+ afro_italian: "Afro-Italian"
+ afro_andalusian: "Afro-Andalusi"
+ afro_arab: "Zanj"
+
 
 #Renamed Currently all renamed cultures do not work unless they are renamed in cultures_1
  #greek:1 "Romaíoi" 
